remove dbt folders and create test parquet files

--- a/Pipelines/Production/PyarrowPipeline.ipynb
+++ b/Pipelines/Production/PyarrowPipeline.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -197,85 +197,25 @@
        "      <td>spotify:playlist:3vlpRGlGVLnLHR1ZlnqSeH</td>\n",
        "      <td>60-luvun suomi-iskelmiä</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>spotify:playlist:2FPJyUmAP18umoGiSfKu1Z</td>\n",
-       "      <td>Fantasy | R&amp;B | by DJ 6rings</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>spotify:playlist:1CUTq7XgrDEMBpaIrld7td</td>\n",
-       "      <td>Sirius 60s on 6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>spotify:playlist:2vQm9xw3ozv1e0gHpBJr5Z</td>\n",
-       "      <td>České hity 60. a 70. let</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>spotify:playlist:1OVq4xI3jpbrVl7sqxEvgg</td>\n",
-       "      <td>sleeping to cigarettes after sex.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>spotify:playlist:04QjDrbg82PxNa7xwD8ysW</td>\n",
-       "      <td>Esquadrao 6 - Soundtrack</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>spotify:playlist:2clc4SLby8YaET3sv1LKkS</td>\n",
-       "      <td>daisy jones &amp; the six</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>spotify:playlist:7gTCSvWv9XwcqIPvGaBX3w</td>\n",
-       "      <td>60's Top Tracks</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>spotify:playlist:1EBqmgjnrrOZHeSX49RTfd</td>\n",
-       "      <td>Hollandse Hits 60-70-80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>spotify:playlist:6cGFLM7g9hZMjUDAVyAXfH</td>\n",
-       "      <td>666 Rap</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO3Fl5CN</td>\n",
-       "      <td>This Is 6363</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               playlist_uri                      playlist_name\n",
-       "0   spotify:playlist:5IMpQdB7rXdmMTuzhlhPZ4                            69 HYPE\n",
-       "1   spotify:playlist:2e8iff2Rxt2BP0VpgJpVfj                  Touhou OST (6-18)\n",
-       "2   spotify:playlist:7GTg7UFb2U2lsSZTfEwDQz              Valerie - '68 Version\n",
-       "3   spotify:playlist:7tvMtjQOPd08XgOBK6K3aE                        MORNING SEX\n",
-       "4   spotify:playlist:5T8y1iYFXgo0FNkYax3XkT                              AK-69\n",
-       "5   spotify:playlist:5T8y1iYFXgo0FNkYax3XkT                              AK-69\n",
-       "6   spotify:playlist:4ubFrmZ99vpCucevPNWRPQ                Happy 60s, 70s, 80s\n",
-       "7   spotify:playlist:7g61XIrplOs8Kiyn7CsIbN                     sex playlist 😫\n",
-       "8   spotify:playlist:5saOtgQGmyweUq8aKmvGVR               Norske 60-talls hits\n",
-       "9   spotify:playlist:3vlpRGlGVLnLHR1ZlnqSeH            60-luvun suomi-iskelmiä\n",
-       "10  spotify:playlist:2FPJyUmAP18umoGiSfKu1Z       Fantasy | R&B | by DJ 6rings\n",
-       "11  spotify:playlist:1CUTq7XgrDEMBpaIrld7td                    Sirius 60s on 6\n",
-       "12  spotify:playlist:2vQm9xw3ozv1e0gHpBJr5Z           České hity 60. a 70. let\n",
-       "13  spotify:playlist:1OVq4xI3jpbrVl7sqxEvgg  sleeping to cigarettes after sex.\n",
-       "14  spotify:playlist:04QjDrbg82PxNa7xwD8ysW           Esquadrao 6 - Soundtrack\n",
-       "15  spotify:playlist:2clc4SLby8YaET3sv1LKkS              daisy jones & the six\n",
-       "16  spotify:playlist:7gTCSvWv9XwcqIPvGaBX3w                    60's Top Tracks\n",
-       "17  spotify:playlist:1EBqmgjnrrOZHeSX49RTfd            Hollandse Hits 60-70-80\n",
-       "18  spotify:playlist:6cGFLM7g9hZMjUDAVyAXfH                            666 Rap\n",
-       "19  spotify:playlist:37i9dQZF1DZ06evO3Fl5CN                       This Is 6363"
+       "                              playlist_uri            playlist_name\n",
+       "0  spotify:playlist:5IMpQdB7rXdmMTuzhlhPZ4                  69 HYPE\n",
+       "1  spotify:playlist:2e8iff2Rxt2BP0VpgJpVfj        Touhou OST (6-18)\n",
+       "2  spotify:playlist:7GTg7UFb2U2lsSZTfEwDQz    Valerie - '68 Version\n",
+       "3  spotify:playlist:7tvMtjQOPd08XgOBK6K3aE              MORNING SEX\n",
+       "4  spotify:playlist:5T8y1iYFXgo0FNkYax3XkT                    AK-69\n",
+       "5  spotify:playlist:5T8y1iYFXgo0FNkYax3XkT                    AK-69\n",
+       "6  spotify:playlist:4ubFrmZ99vpCucevPNWRPQ      Happy 60s, 70s, 80s\n",
+       "7  spotify:playlist:7g61XIrplOs8Kiyn7CsIbN           sex playlist 😫\n",
+       "8  spotify:playlist:5saOtgQGmyweUq8aKmvGVR     Norske 60-talls hits\n",
+       "9  spotify:playlist:3vlpRGlGVLnLHR1ZlnqSeH  60-luvun suomi-iskelmiä"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -407,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -421,359 +361,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/18 [00:00<?, ?it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1DWSfODohdgUzS/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
-      "100%|██████████| 18/18 [00:16<00:00,  1.06it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 341/341 [00:33<00:00, 10.12it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updated #1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 342/342 [00:26<00:00, 12.91it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/18 [00:00<?, ?it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1DWSfODohdgUzS/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
-      "100%|██████████| 18/18 [00:12<00:00,  1.50it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 546/546 [00:57<00:00,  9.56it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updated #2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 546/546 [00:49<00:00, 11.02it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/18 [00:00<?, ?it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1DWSfODohdgUzS/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
-      "100%|██████████| 18/18 [00:13<00:00,  1.33it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 56%|█████▌    | 473/851 [00:47<00:35, 10.61it/s]Expected id of type track but found type Growing+Up+%28Tom+Lord-Alge+Mix%29 spotify:local:Peter+Gabriel:Greatest+Hits+%28CD2%29:Growing+Up+%28Tom+Lord-Alge+Mix%29:291\n",
-      "HTTP Error for GET to https://api.spotify.com/v1/tracks/291 with Params: {'market': None} returned 400 due to invalid id\n",
-      " 56%|█████▌    | 477/851 [00:47<00:33, 11.12it/s]Expected id of type track but found type Shaking+The+Tree+%2797 spotify:local:Peter+Gabriel:Greatest+Hits+%28CD2%29:Shaking+The+Tree+%2797:337\n",
-      "HTTP Error for GET to https://api.spotify.com/v1/tracks/337 with Params: {'market': None} returned 400 due to invalid id\n",
-      "Expected id of type track but found type While+The+Earth+Sleeps+%28feat.+Deep+Forest%29 spotify:local:Peter+Gabriel:Greatest+Hits+%28CD2%29:While+The+Earth+Sleeps+%28feat.+Deep+Forest%29:234\n",
-      "HTTP Error for GET to https://api.spotify.com/v1/tracks/234 with Params: {'market': None} returned 400 due to invalid id\n",
-      "100%|██████████| 851/851 [01:25<00:00,  9.94it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updated #3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 56%|█████▌    | 474/852 [00:35<00:24, 15.39it/s]Expected id of type track but found type Growing+Up+%28Tom+Lord-Alge+Mix%29 spotify:local:Peter+Gabriel:Greatest+Hits+%28CD2%29:Growing+Up+%28Tom+Lord-Alge+Mix%29:291\n",
-      " 56%|█████▌    | 478/852 [00:35<00:23, 15.67it/s]Expected id of type track but found type Shaking+The+Tree+%2797 spotify:local:Peter+Gabriel:Greatest+Hits+%28CD2%29:Shaking+The+Tree+%2797:337\n",
-      "Expected id of type track but found type While+The+Earth+Sleeps+%28feat.+Deep+Forest%29 spotify:local:Peter+Gabriel:Greatest+Hits+%28CD2%29:While+The+Earth+Sleeps+%28feat.+Deep+Forest%29:234\n",
-      "100%|██████████| 852/852 [01:08<00:00, 12.43it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/18 [00:00<?, ?it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1DWSfODohdgUzS/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
-      "100%|██████████| 18/18 [00:13<00:00,  1.32it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 844/844 [01:25<00:00,  9.84it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updated #4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 881/881 [01:10<00:00, 12.50it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/18 [00:00<?, ?it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1DWSfODohdgUzS/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
-      "100%|██████████| 18/18 [00:14<00:00,  1.24it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  8%|▊         | 51/669 [00:05<00:56, 10.88it/s]Expected id of type track but found type Bee+Gees+Greatest+Hits+Full+Album+-+Best+Songs+Of+Bee+Gees spotify:local:::Bee+Gees+Greatest+Hits+Full+Album+-+Best+Songs+Of+Bee+Gees:4149\n",
-      "HTTP Error for GET to https://api.spotify.com/v1/tracks/4149 with Params: {'market': None} returned 400 due to invalid id\n",
-      "100%|██████████| 669/669 [01:04<00:00, 10.40it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updated #5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  7%|▋         | 50/670 [00:04<00:38, 16.12it/s]Expected id of type track but found type Bee+Gees+Greatest+Hits+Full+Album+-+Best+Songs+Of+Bee+Gees spotify:local:::Bee+Gees+Greatest+Hits+Full+Album+-+Best+Songs+Of+Bee+Gees:4149\n",
-      "100%|██████████| 670/670 [00:54<00:00, 12.26it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/18 [00:00<?, ?it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1DWSfODohdgUzS/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
-      "100%|██████████| 18/18 [00:14<00:00,  1.26it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #6\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1150/1150 [01:56<00:00,  9.85it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updated #6\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1152/1152 [01:41<00:00, 11.35it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #6\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/18 [00:00<?, ?it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1DWSfODohdgUzS/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
-      "100%|██████████| 18/18 [00:14<00:00,  1.26it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 444/444 [00:45<00:00,  9.67it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updated #7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 444/444 [00:39<00:00, 11.26it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/18 [00:00<?, ?it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1DWSfODohdgUzS/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
-      "100%|██████████| 18/18 [00:15<00:00,  1.17it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #8\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 75%|███████▌  | 363/482 [00:35<00:10, 11.05it/s]Expected id of type track but found type dxnnyfxntom+x+trippie+redd+-+the+grinch+%28guitar+remix%29 spotify:local:::dxnnyfxntom+x+trippie+redd+-+the+grinch+%28guitar+remix%29:100\n",
-      "HTTP Error for GET to https://api.spotify.com/v1/tracks/100 with Params: {'market': None} returned 400 due to invalid id\n",
-      "100%|██████████| 482/482 [00:47<00:00, 10.24it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updated #8\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 75%|███████▍  | 362/483 [00:32<01:03,  1.89it/s]Expected id of type track but found type dxnnyfxntom+x+trippie+redd+-+the+grinch+%28guitar+remix%29 spotify:local:::dxnnyfxntom+x+trippie+redd+-+the+grinch+%28guitar+remix%29:100\n",
-      "100%|██████████| 483/483 [00:43<00:00, 11.11it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #8\n"
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -787,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -817,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -847,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
