--- a/model/analysis.ipynb
+++ b/model/analysis.ipynb
@@ -2,181 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import sklearn\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_parquet(r'features.parquet.gzip',engine='pyarrow')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>track_uri</th>\n",
-       "      <th>danceability</th>\n",
-       "      <th>energy</th>\n",
-       "      <th>key</th>\n",
-       "      <th>loudness</th>\n",
-       "      <th>mode</th>\n",
-       "      <th>speechiness</th>\n",
-       "      <th>acousticness</th>\n",
-       "      <th>instrumentalness</th>\n",
-       "      <th>liveness</th>\n",
-       "      <th>valence</th>\n",
-       "      <th>tempo</th>\n",
-       "      <th>duration_ms</th>\n",
-       "      <th>time_signature</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>spotify:track:0000vdREvCVMxbQTkS888c</td>\n",
-       "      <td>0.910</td>\n",
-       "      <td>0.3740</td>\n",
-       "      <td>8</td>\n",
-       "      <td>-9.844</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.1990</td>\n",
-       "      <td>0.0757</td>\n",
-       "      <td>0.00301</td>\n",
-       "      <td>0.1540</td>\n",
-       "      <td>0.432</td>\n",
-       "      <td>104.042</td>\n",
-       "      <td>160726</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>spotify:track:00023kzM0NKtbCAzMiYXwy</td>\n",
-       "      <td>0.670</td>\n",
-       "      <td>0.7030</td>\n",
-       "      <td>5</td>\n",
-       "      <td>-9.828</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.3150</td>\n",
-       "      <td>0.0815</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.2330</td>\n",
-       "      <td>0.747</td>\n",
-       "      <td>150.402</td>\n",
-       "      <td>170841</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>spotify:track:0004Uy71ku11n3LMpuyf59</td>\n",
-       "      <td>0.623</td>\n",
-       "      <td>0.5990</td>\n",
-       "      <td>6</td>\n",
-       "      <td>-9.255</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0255</td>\n",
-       "      <td>0.1770</td>\n",
-       "      <td>0.00148</td>\n",
-       "      <td>0.0748</td>\n",
-       "      <td>0.381</td>\n",
-       "      <td>140.056</td>\n",
-       "      <td>258907</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>spotify:track:0005HhCeIUqi6jLSKRYBZw</td>\n",
-       "      <td>0.137</td>\n",
-       "      <td>0.1860</td>\n",
-       "      <td>7</td>\n",
-       "      <td>-24.345</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0319</td>\n",
-       "      <td>0.8810</td>\n",
-       "      <td>0.89100</td>\n",
-       "      <td>0.0696</td>\n",
-       "      <td>0.289</td>\n",
-       "      <td>89.884</td>\n",
-       "      <td>256000</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>spotify:track:000brQJEvEDAHPZjWyv6wx</td>\n",
-       "      <td>0.238</td>\n",
-       "      <td>0.0132</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-32.252</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0375</td>\n",
-       "      <td>0.9940</td>\n",
-       "      <td>0.90700</td>\n",
-       "      <td>0.0947</td>\n",
-       "      <td>0.041</td>\n",
-       "      <td>67.773</td>\n",
-       "      <td>224250</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index                             track_uri  danceability  energy  key  \\\n",
-       "0      0  spotify:track:0000vdREvCVMxbQTkS888c         0.910  0.3740    8   \n",
-       "1      0  spotify:track:00023kzM0NKtbCAzMiYXwy         0.670  0.7030    5   \n",
-       "2      0  spotify:track:0004Uy71ku11n3LMpuyf59         0.623  0.5990    6   \n",
-       "3      0  spotify:track:0005HhCeIUqi6jLSKRYBZw         0.137  0.1860    7   \n",
-       "4      0  spotify:track:000brQJEvEDAHPZjWyv6wx         0.238  0.0132    2   \n",
-       "\n",
-       "   loudness  mode  speechiness  acousticness  instrumentalness  liveness  \\\n",
-       "0    -9.844     0       0.1990        0.0757           0.00301    0.1540   \n",
-       "1    -9.828     0       0.3150        0.0815           0.00000    0.2330   \n",
-       "2    -9.255     1       0.0255        0.1770           0.00148    0.0748   \n",
-       "3   -24.345     0       0.0319        0.8810           0.89100    0.0696   \n",
-       "4   -32.252     0       0.0375        0.9940           0.90700    0.0947   \n",
-       "\n",
-       "   valence    tempo  duration_ms  time_signature  \n",
-       "0    0.432  104.042       160726               4  \n",
-       "1    0.747  150.402       170841               4  \n",
-       "2    0.381  140.056       258907               4  \n",
-       "3    0.289   89.884       256000               4  \n",
-       "4    0.041   67.773       224250               4  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3460, in run_code\n",
+      "  File \"C:\\Users\\danny\\AppData\\Local\\Temp\\ipykernel_27128\\3781546021.py\", line 2, in <module>\n",
+      "    cumulative = df.cumsum()\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\pandas\\core\\generic.py\", line 11439, in cumsum\n",
+      "    return NDFrame.cumsum(self, axis, skipna, *args, **kwargs)\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\pandas\\core\\generic.py\", line 11047, in cumsum\n",
+      "    return self._accum_func(\"cumsum\", np.cumsum, axis, skipna, *args, **kwargs)\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\pandas\\core\\generic.py\", line 11032, in _accum_func\n",
+      "    result = self._mgr.apply(block_accum_func)\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\pandas\\core\\internals\\managers.py\", line 344, in apply\n",
+      "    applied = b.apply(f, **kwargs)\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\pandas\\core\\internals\\blocks.py\", line 327, in apply\n",
+      "    result = func(self.values, **kwargs)\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\pandas\\core\\generic.py\", line 11027, in block_accum_func\n",
+      "    result = nanops.na_accum_func(values, func, skipna=skipna)\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\pandas\\core\\nanops.py\", line 1762, in na_accum_func\n",
+      "    result = accum_func(vals, axis=0)\n",
+      "  File \"<__array_function__ internals>\", line 200, in cumsum\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\numpy\\core\\fromnumeric.py\", line 2597, in cumsum\n",
+      "    return _wrapfunc(a, 'cumsum', axis=axis, dtype=dtype, out=out)\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\numpy\\core\\fromnumeric.py\", line 57, in _wrapfunc\n",
+      "    return bound(*args, **kwds)\n",
+      "MemoryError\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2057, in showtraceback\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1288, in structured_traceback\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1177, in structured_traceback\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1030, in structured_traceback\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 935, in format_exception_as_a_whole\n",
+      "  File \"c:\\Users\\danny\\Desktop\\UVU\\Spring 2023\\Data Science Club\\UVU-2022-2023\\venv\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1003, in get_records\n",
+      "  File \"C:\\Users\\danny\\AppData\\Local\\Programs\\Python\\Python310\\lib\\inspect.py\", line 1129, in getsourcelines\n",
+      "    lines, lnum = findsource(object)\n",
+      "  File \"C:\\Users\\danny\\AppData\\Local\\Programs\\Python\\Python310\\lib\\inspect.py\", line 958, in findsource\n",
+      "    raise OSError('could not get source code')\n",
+      "OSError: could not get source code\n"
+     ]
     }
    ],
    "source": [
-    "df = pd.read_parquet(r\"../temp_audio_features.parquet.gzip\")"
+    "# display averages, median, mode of each column from df? standard deviation? maybe not relevant\n",
+    "cumulative = df.cumsum()\n",
+    "plt.figure()\n",
+    "cumulative.plot()\n",
+    "# \n",
+    "# # # or maybe...\n",
+    "# # plt.imshow(cumulative,cmap=plt.cm.Greys_r)\n",
+    "# # plt.show()\n",
+    "# # \n",
+    "# plt.plot(df.columns['idk1'],label='idk1',color='red')\n",
+    "# plt.plot(df.columns['idk2'],label='idk2',color='blue')\n",
+    "# plt.plot(df.columns['idk3'],label='idk3',color='green')\n",
+    "# \n",
+    "# blah"
    ]
   },
   {
