--- a/model/analysis.ipynb
+++ b/model/analysis.ipynb
@@ -820,9 +820,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.1"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "90d99a365a6800d6d3b874802d775db992b69c47481bfc65e12294d647a46c22"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
